[add]DatabaseTest.javaファイルの作成
DB接続のテスト用に作成しました。それに伴い、Web.xmlファイル修正してます

--- a/tomcat/WEB-INF/web.xml
+++ b/tomcat/WEB-INF/web.xml
@@ -20,4 +20,18 @@
     </url-pattern>
   </servlet-mapping>
 
+    <servlet>
+    <servlet-name>datatest</servlet-name>
+    <servlet-class>DatabaseTest</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>
+      datatest
+    </servlet-name>
+    <url-pattern>
+      /datatest
+    </url-pattern>
+  </servlet-mapping>
+
 </web-app>
