[add] DatabaseTest2.javaファイルの追加
DBからデータを取得するためのjavaファイルの追加
それに伴い、web.xmlファイル修正してます。

--- a/tomcat/WEB-INF/web.xml
+++ b/tomcat/WEB-INF/web.xml
@@ -48,4 +48,18 @@
     </url-pattern>
   </servlet-mapping>
 
+      <servlet>
+    <servlet-name>datatest2</servlet-name>
+    <servlet-class>DatabaseTest2</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>
+      datatest2
+    </servlet-name>
+    <url-pattern>
+      /datatest2
+    </url-pattern>
+  </servlet-mapping>
+
 </web-app>
