[add] DatabaseTest3.javaファイルの追加
DBのデータを更新するためのjavaファイルの追加
それに伴い、web.xmlファイル修正してます

--- a/tomcat/WEB-INF/web.xml
+++ b/tomcat/WEB-INF/web.xml
@@ -62,4 +62,18 @@
     </url-pattern>
   </servlet-mapping>
 
+      <servlet>
+    <servlet-name>datatest3</servlet-name>
+    <servlet-class>DatabaseTest3</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>
+      datatest3
+    </servlet-name>
+    <url-pattern>
+      /datatest3
+    </url-pattern>
+  </servlet-mapping>
+
 </web-app>
