[add] DatabaseTest4ファイルの追加
DBにデータを追加するためのjavaファイル等の追加
それに伴い、web.xmlファイル修正してます

--- a/tomcat/WEB-INF/web.xml
+++ b/tomcat/WEB-INF/web.xml
@@ -76,4 +76,18 @@
     </url-pattern>
   </servlet-mapping>
 
+        <servlet>
+    <servlet-name>datatest4</servlet-name>
+    <servlet-class>DatabaseTest4</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>
+      datatest4
+    </servlet-name>
+    <url-pattern>
+      /datatest4
+    </url-pattern>
+  </servlet-mapping>
+
 </web-app>
