[add] DatabaseTest6ファイルの追加
PreparedStatementが使用できるかどうか確認する
javaファイル等の追加
それに伴い、web.xmlファイル修正してます

--- a/tomcat/WEB-INF/web.xml
+++ b/tomcat/WEB-INF/web.xml
@@ -104,4 +104,18 @@
     </url-pattern>
   </servlet-mapping>
 
+          <servlet>
+    <servlet-name>datatest6</servlet-name>
+    <servlet-class>DatabaseTest6</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>
+      datatest6
+    </servlet-name>
+    <url-pattern>
+      /datatest6
+    </url-pattern>
+  </servlet-mapping>
+
 </web-app>
